# pythonFastAPITemplate

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/migrations/: env.py
migrations/: env.py
src/app_template/: db.py  main.py  settings.py
