[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.6",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "uvicorn==0.34.0",
  "asyncpg==0.30.0",
  "pydantic-settings==2.7.0"
]

[dependency-groups]
dev = [
    "mypy[faster-cache]>=1.15.0",
    "pdbpp>=0.11.6",
    "ruff>=0.11.10",
]

[tool.mypy]
python_version = "3.10"
files = ["src/app_template"]
exclude = "tests/.*"
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
strict = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = ["E", "F", "G", "I", "N", "Q", "UP", "C90", "T20", "TID"]
unfixable = ["UP007"] # typer does not handle PEP604 annotations

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["smyth"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false